# zanvil

./: .gitignore  .sops.yaml  CLAUDE.md  README.md  completions.zsh  config.zsh.example  install.sh  plugins.zsh  rc.zsh  uninstall.sh
.github/workflows/: auto-release.yml  pages.yml  tests.yml  wiki.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/cmd/: audit.rs  bench.rs  doctor.rs  mod.rs  modules.rs  mr_fanout.rs  project.rs  sync.rs  theme.rs  tui_config.rs  update.rs
core/: _zanvil  _zsh-env-cli  admin.zsh  aliases.zsh  auto_update.zsh  check_env_deps.zsh  commands.zsh  completions.zsh  hooks.zsh  loader.zsh  migrate_zanvil.zsh  theme.zsh  ui.zsh  variables.zsh
core/commands/: admin.zsh  commands.zsh  setup.zsh  theme.zsh
core/lifecycle/: auto_update.zsh  migrate.zsh  sync.zsh
delta/: gitconfig
docs/: ROADMAP.md
env.d.example/: docker.zsh  work.zsh
examples/: config.zsh.example
examples/env.d/: ssl.zsh
functions/: gitlab_logic.zsh  kube_config.zsh  zsh_env_commands.zsh
k9s/: hotkeys.yaml  plugins.yaml
lazygit/: config.yml
modules/ai/: .module.toml  ai_context.zsh  ai_tokens.zsh  init.zsh
modules/docker/: .module.toml  init.zsh  (+2 more)
scripts/: clone-projects.sh  ssl-setup.sh  trigger-jobs.sh
site/: astro.config.mjs  package-lock.json  package.json
spec/: TODO.md  mise_t3_spec.sh  work_context_spec.sh  work_t3_spec.sh
themes/: tokyo-light-pro.toml  tokyo-night-pro.toml
wiki/: AI-Context.md  Aliases.md  Commandes.md  Configuration.md  Contributing.md  Home.md  Installation.md  Kubernetes.md  Plugins.md  Security.md  Themes.md
(+76 files in other folders)
