[package]
name = "zsh-env-cli"
version = "0.1.0"
edition = "2021"
description = "CLI companion for zsh_env"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
colored = "2"

[profile.release]
strip = true
lto = true
